parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PHP_OPEN statements PHP_CLOSE
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statement -> PRINT expression SEMI
Rule 5     statement -> PRINT expression
Rule 6     statement -> ECHO expression SEMI
Rule 7     statement -> ECHO expression
Rule 8     statement -> VAR EQUALS expression SEMI
Rule 9     statement -> IF LPAREN expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
Rule 10    statement -> WHILE LPAREN expression RPAREN LCURLY statements RCURLY
Rule 11    statement -> IF LPAREN expression RPAREN LCURLY statements RCURLY
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression MOD expression
Rule 15    expression -> expression LESSEQUAL expression
Rule 16    expression -> expression GREATERTHAN expression
Rule 17    expression -> expression NOTEQUAL expression
Rule 18    expression -> expression CONCAT expression
Rule 19    expression -> LPAREN expression RPAREN
Rule 20    expression -> NUMBER
Rule 21    expression -> VAR
Rule 22    expression -> STRING

Terminals, with rules where they appear

CONCAT               : 18
DIVIDE               : 13
ECHO                 : 6 7
ELSE                 : 9
EQUALS               : 8
GREATERTHAN          : 16
IF                   : 9 11
LCURLY               : 9 9 10 11
LESSEQUAL            : 15
LPAREN               : 9 10 11 19
MOD                  : 14
NOTEQUAL             : 17
NUMBER               : 20
PHP_CLOSE            : 1
PHP_OPEN             : 1
PLUS                 : 12
PRINT                : 4 5
RCURLY               : 9 9 10 11
RPAREN               : 9 10 11 19
SEMI                 : 4 6 8
STRING               : 22
VAR                  : 8 21
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 7 8 9 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19
program              : 0
statement            : 2 3
statements           : 1 2 9 9 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PHP_OPEN statements PHP_CLOSE

    PHP_OPEN        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PHP_OPEN . statements PHP_CLOSE
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . PRINT expression SEMI
    (5) statement -> . PRINT expression
    (6) statement -> . ECHO expression SEMI
    (7) statement -> . ECHO expression
    (8) statement -> . VAR EQUALS expression SEMI
    (9) statement -> . IF LPAREN expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (10) statement -> . WHILE LPAREN expression RPAREN LCURLY statements RCURLY
    (11) statement -> . IF LPAREN expression RPAREN LCURLY statements RCURLY

    PRINT           shift and go to state 5
    ECHO            shift and go to state 6
    VAR             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9

    statements                     shift and go to state 3
    statement                      shift and go to state 4

state 3

    (1) program -> PHP_OPEN statements . PHP_CLOSE

    PHP_CLOSE       shift and go to state 10


state 4

    (2) statements -> statement . statements
    (3) statements -> statement .
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . PRINT expression SEMI
    (5) statement -> . PRINT expression
    (6) statement -> . ECHO expression SEMI
    (7) statement -> . ECHO expression
    (8) statement -> . VAR EQUALS expression SEMI
    (9) statement -> . IF LPAREN expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (10) statement -> . WHILE LPAREN expression RPAREN LCURLY statements RCURLY
    (11) statement -> . IF LPAREN expression RPAREN LCURLY statements RCURLY

    PHP_CLOSE       reduce using rule 3 (statements -> statement .)
    RCURLY          reduce using rule 3 (statements -> statement .)
    PRINT           shift and go to state 5
    ECHO            shift and go to state 6
    VAR             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9

    statement                      shift and go to state 4
    statements                     shift and go to state 11

state 5

    (4) statement -> PRINT . expression SEMI
    (5) statement -> PRINT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 12

state 6

    (6) statement -> ECHO . expression SEMI
    (7) statement -> ECHO . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 17

state 7

    (8) statement -> VAR . EQUALS expression SEMI

    EQUALS          shift and go to state 18


state 8

    (9) statement -> IF . LPAREN expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (11) statement -> IF . LPAREN expression RPAREN LCURLY statements RCURLY

    LPAREN          shift and go to state 19


state 9

    (10) statement -> WHILE . LPAREN expression RPAREN LCURLY statements RCURLY

    LPAREN          shift and go to state 20


state 10

    (1) program -> PHP_OPEN statements PHP_CLOSE .

    $end            reduce using rule 1 (program -> PHP_OPEN statements PHP_CLOSE .)


state 11

    (2) statements -> statement statements .

    PHP_CLOSE       reduce using rule 2 (statements -> statement statements .)
    RCURLY          reduce using rule 2 (statements -> statement statements .)


state 12

    (4) statement -> PRINT expression . SEMI
    (5) statement -> PRINT expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    SEMI            shift and go to state 21
    PRINT           reduce using rule 5 (statement -> PRINT expression .)
    ECHO            reduce using rule 5 (statement -> PRINT expression .)
    VAR             reduce using rule 5 (statement -> PRINT expression .)
    IF              reduce using rule 5 (statement -> PRINT expression .)
    WHILE           reduce using rule 5 (statement -> PRINT expression .)
    PHP_CLOSE       reduce using rule 5 (statement -> PRINT expression .)
    RCURLY          reduce using rule 5 (statement -> PRINT expression .)
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 13

    (19) expression -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 29

state 14

    (20) expression -> NUMBER .

    SEMI            reduce using rule 20 (expression -> NUMBER .)
    PLUS            reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    MOD             reduce using rule 20 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 20 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 20 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 20 (expression -> NUMBER .)
    CONCAT          reduce using rule 20 (expression -> NUMBER .)
    PRINT           reduce using rule 20 (expression -> NUMBER .)
    ECHO            reduce using rule 20 (expression -> NUMBER .)
    VAR             reduce using rule 20 (expression -> NUMBER .)
    IF              reduce using rule 20 (expression -> NUMBER .)
    WHILE           reduce using rule 20 (expression -> NUMBER .)
    PHP_CLOSE       reduce using rule 20 (expression -> NUMBER .)
    RCURLY          reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)


state 15

    (21) expression -> VAR .

    SEMI            reduce using rule 21 (expression -> VAR .)
    PLUS            reduce using rule 21 (expression -> VAR .)
    DIVIDE          reduce using rule 21 (expression -> VAR .)
    MOD             reduce using rule 21 (expression -> VAR .)
    LESSEQUAL       reduce using rule 21 (expression -> VAR .)
    GREATERTHAN     reduce using rule 21 (expression -> VAR .)
    NOTEQUAL        reduce using rule 21 (expression -> VAR .)
    CONCAT          reduce using rule 21 (expression -> VAR .)
    PRINT           reduce using rule 21 (expression -> VAR .)
    ECHO            reduce using rule 21 (expression -> VAR .)
    VAR             reduce using rule 21 (expression -> VAR .)
    IF              reduce using rule 21 (expression -> VAR .)
    WHILE           reduce using rule 21 (expression -> VAR .)
    PHP_CLOSE       reduce using rule 21 (expression -> VAR .)
    RCURLY          reduce using rule 21 (expression -> VAR .)
    RPAREN          reduce using rule 21 (expression -> VAR .)


state 16

    (22) expression -> STRING .

    SEMI            reduce using rule 22 (expression -> STRING .)
    PLUS            reduce using rule 22 (expression -> STRING .)
    DIVIDE          reduce using rule 22 (expression -> STRING .)
    MOD             reduce using rule 22 (expression -> STRING .)
    LESSEQUAL       reduce using rule 22 (expression -> STRING .)
    GREATERTHAN     reduce using rule 22 (expression -> STRING .)
    NOTEQUAL        reduce using rule 22 (expression -> STRING .)
    CONCAT          reduce using rule 22 (expression -> STRING .)
    PRINT           reduce using rule 22 (expression -> STRING .)
    ECHO            reduce using rule 22 (expression -> STRING .)
    VAR             reduce using rule 22 (expression -> STRING .)
    IF              reduce using rule 22 (expression -> STRING .)
    WHILE           reduce using rule 22 (expression -> STRING .)
    PHP_CLOSE       reduce using rule 22 (expression -> STRING .)
    RCURLY          reduce using rule 22 (expression -> STRING .)
    RPAREN          reduce using rule 22 (expression -> STRING .)


state 17

    (6) statement -> ECHO expression . SEMI
    (7) statement -> ECHO expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    SEMI            shift and go to state 30
    PRINT           reduce using rule 7 (statement -> ECHO expression .)
    ECHO            reduce using rule 7 (statement -> ECHO expression .)
    VAR             reduce using rule 7 (statement -> ECHO expression .)
    IF              reduce using rule 7 (statement -> ECHO expression .)
    WHILE           reduce using rule 7 (statement -> ECHO expression .)
    PHP_CLOSE       reduce using rule 7 (statement -> ECHO expression .)
    RCURLY          reduce using rule 7 (statement -> ECHO expression .)
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 18

    (8) statement -> VAR EQUALS . expression SEMI
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 31

state 19

    (9) statement -> IF LPAREN . expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (11) statement -> IF LPAREN . expression RPAREN LCURLY statements RCURLY
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 32

state 20

    (10) statement -> WHILE LPAREN . expression RPAREN LCURLY statements RCURLY
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 33

state 21

    (4) statement -> PRINT expression SEMI .

    PRINT           reduce using rule 4 (statement -> PRINT expression SEMI .)
    ECHO            reduce using rule 4 (statement -> PRINT expression SEMI .)
    VAR             reduce using rule 4 (statement -> PRINT expression SEMI .)
    IF              reduce using rule 4 (statement -> PRINT expression SEMI .)
    WHILE           reduce using rule 4 (statement -> PRINT expression SEMI .)
    PHP_CLOSE       reduce using rule 4 (statement -> PRINT expression SEMI .)
    RCURLY          reduce using rule 4 (statement -> PRINT expression SEMI .)


state 22

    (12) expression -> expression PLUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 34

state 23

    (13) expression -> expression DIVIDE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 35

state 24

    (14) expression -> expression MOD . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 36

state 25

    (15) expression -> expression LESSEQUAL . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 37

state 26

    (16) expression -> expression GREATERTHAN . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 38

state 27

    (17) expression -> expression NOTEQUAL . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 39

state 28

    (18) expression -> expression CONCAT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression MOD expression
    (15) expression -> . expression LESSEQUAL expression
    (16) expression -> . expression GREATERTHAN expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression CONCAT expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . VAR
    (22) expression -> . STRING

    LPAREN          shift and go to state 13
    NUMBER          shift and go to state 14
    VAR             shift and go to state 15
    STRING          shift and go to state 16

    expression                     shift and go to state 40

state 29

    (19) expression -> LPAREN expression . RPAREN
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 30

    (6) statement -> ECHO expression SEMI .

    PRINT           reduce using rule 6 (statement -> ECHO expression SEMI .)
    ECHO            reduce using rule 6 (statement -> ECHO expression SEMI .)
    VAR             reduce using rule 6 (statement -> ECHO expression SEMI .)
    IF              reduce using rule 6 (statement -> ECHO expression SEMI .)
    WHILE           reduce using rule 6 (statement -> ECHO expression SEMI .)
    PHP_CLOSE       reduce using rule 6 (statement -> ECHO expression SEMI .)
    RCURLY          reduce using rule 6 (statement -> ECHO expression SEMI .)


state 31

    (8) statement -> VAR EQUALS expression . SEMI
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    SEMI            shift and go to state 42
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 32

    (9) statement -> IF LPAREN expression . RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (11) statement -> IF LPAREN expression . RPAREN LCURLY statements RCURLY
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 33

    (10) statement -> WHILE LPAREN expression . RPAREN LCURLY statements RCURLY
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28


state 34

    (12) expression -> expression PLUS expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    SEMI            reduce using rule 12 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 12 (expression -> expression PLUS expression .)
    MOD             reduce using rule 12 (expression -> expression PLUS expression .)
    LESSEQUAL       reduce using rule 12 (expression -> expression PLUS expression .)
    GREATERTHAN     reduce using rule 12 (expression -> expression PLUS expression .)
    NOTEQUAL        reduce using rule 12 (expression -> expression PLUS expression .)
    CONCAT          reduce using rule 12 (expression -> expression PLUS expression .)
    PRINT           reduce using rule 12 (expression -> expression PLUS expression .)
    ECHO            reduce using rule 12 (expression -> expression PLUS expression .)
    VAR             reduce using rule 12 (expression -> expression PLUS expression .)
    IF              reduce using rule 12 (expression -> expression PLUS expression .)
    WHILE           reduce using rule 12 (expression -> expression PLUS expression .)
    PHP_CLOSE       reduce using rule 12 (expression -> expression PLUS expression .)
    RCURLY          reduce using rule 12 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 12 (expression -> expression PLUS expression .)
    DIVIDE          shift and go to state 23

  ! DIVIDE          [ reduce using rule 12 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 22 ]
  ! MOD             [ shift and go to state 24 ]
  ! LESSEQUAL       [ shift and go to state 25 ]
  ! GREATERTHAN     [ shift and go to state 26 ]
  ! NOTEQUAL        [ shift and go to state 27 ]
  ! CONCAT          [ shift and go to state 28 ]


state 35

    (13) expression -> expression DIVIDE expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

    SEMI            reduce using rule 13 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 13 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 13 (expression -> expression DIVIDE expression .)
    MOD             reduce using rule 13 (expression -> expression DIVIDE expression .)
    LESSEQUAL       reduce using rule 13 (expression -> expression DIVIDE expression .)
    GREATERTHAN     reduce using rule 13 (expression -> expression DIVIDE expression .)
    NOTEQUAL        reduce using rule 13 (expression -> expression DIVIDE expression .)
    CONCAT          reduce using rule 13 (expression -> expression DIVIDE expression .)
    PRINT           reduce using rule 13 (expression -> expression DIVIDE expression .)
    ECHO            reduce using rule 13 (expression -> expression DIVIDE expression .)
    VAR             reduce using rule 13 (expression -> expression DIVIDE expression .)
    IF              reduce using rule 13 (expression -> expression DIVIDE expression .)
    WHILE           reduce using rule 13 (expression -> expression DIVIDE expression .)
    PHP_CLOSE       reduce using rule 13 (expression -> expression DIVIDE expression .)
    RCURLY          reduce using rule 13 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 13 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 22 ]
  ! DIVIDE          [ shift and go to state 23 ]
  ! MOD             [ shift and go to state 24 ]
  ! LESSEQUAL       [ shift and go to state 25 ]
  ! GREATERTHAN     [ shift and go to state 26 ]
  ! NOTEQUAL        [ shift and go to state 27 ]
  ! CONCAT          [ shift and go to state 28 ]


state 36

    (14) expression -> expression MOD expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . MOD expression
    (15) expression -> expression . LESSEQUAL expression
    (16) expression -> expression . GREATERTHAN expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . CONCAT expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for LESSEQUAL resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for NOTEQUAL resolved as shift
  ! shift/reduce conflict for CONCAT resolved as shift
    SEMI            reduce using rule 14 (expression -> expression MOD expression .)
    PRINT           reduce using rule 14 (expression -> expression MOD expression .)
    ECHO            reduce using rule 14 (expression -> expression MOD expression .)
    VAR             reduce using rule 14 (expression -> expression MOD expression .)
    IF              reduce using rule 14 (expression -> expression MOD expression .)
    WHILE           reduce using rule 14 (expression -> expression MOD expression .)
    PHP_CLOSE       reduce using rule 14 (expression -> expression MOD expression .)
    RCURLY          reduce using rule 14 (expression -> expression MOD expression .)
    RPAREN          reduce using rule 14 (expression -> expression MOD expression .)
    PLUS            shift and go to state 22
    DIVIDE          shift and go to state 23
    MOD             shift and go to state 24
    LESSEQUAL       shift and go to state 25
    GREATERTHAN     shift and go to state 26
    NOTEQUAL        shift and go to state 27
    CONCAT          shift and go to state 28

  ! PLUS            [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! MOD             [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! LESSEQUAL       [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! GREATERTHAN     [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! NOTEQUAL        [ reduce using rule 14 (expression -> expression MOD expression .) ]
  ! CONCAT          [ reduce using rule 14 (expression -> expression MOD expression .) ]


state 37
